# kernelsearch

./: main.py  models.py  pyproject.toml  search.py  tests.py
src/: models.py  search.py  utils.py
src/kernelsearch/: filters.py  models.py  search.py  utils.py
